--- a/CodeAlpha_Music_player/music.html
+++ b/CodeAlpha_Music_player/music.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Music Player</title>
+  <link rel="stylesheet" href="music.css">
+</head>
+<body>
+  <div class="music-player">
+    <div class="music-info">
+      <img id="album-cover" src="" alt="Album Cover">
+      <div class="track-details">
+        <h2 id="track-title">Track Title</h2>
+        <p id="track-artist">Artist Name</p>
+      </div>
+    </div>
+    <audio id="audio-player" src="music/song1.mp3" preload="auto"></audio>
+    <div class="controls">
+      <button id="prev-btn">Prev</button>
+      <button id="play-btn">Play</button>
+      <button id="next-btn">Next</button>
+    </div>
+    <div class="progress-bar">
+      <input type="range" id="progress-bar" value="0" max="100">
+    </div>
+  </div>
+  <script src="music.js"></script>
+</body>
+</html>
